# niff-Stellar-shurance

./: .gitignore
.github/: pull_request_template.md
.github/workflows/: backend-ci.yml  ci.yml  contract-fuzz.yml  contracts-ci.yml  frontend-ci.yml
backend/: .env.example  README.md  jest.config.js  jest.setup.ts  package-lock.json  package.json  tsconfig.build.json
backend/prisma/: schema.prisma
backend/src/: main.ts  tracing.ts
backend/src/__tests__/: normalize-address.test.ts  tenant-isolation.test.ts
backend/src/admin/: admin.controller.spec.ts  admin.controller.ts  admin.module.ts  admin.service.spec.ts  admin.service.ts  bull-board.middleware.ts
backend/src/auth/: auth.module.ts  auth.service.test.ts  auth.service.ts
backend/src/claims/: claim-deadline.bootstrap.ts  claim-deadline.constants.ts  claim-deadline.processor.service.ts  claim-deadline.queue.ts  claims.module.ts
backend/src/config/: env.definitions.ts  network.config.test.ts
backend/src/dto/: policy.dto.ts
backend/src/types/: policy.ts
backend/test/: global-setup.ts
contracts/niffyinsure/fuzz/: Cargo.toml
contracts/niffyinsure/fuzz/corpus/fuzz_file_claim/: seed1
contracts/niffyinsure/fuzz/corpus/fuzz_initiate_policy/: seed1
contracts/niffyinsure/fuzz/fuzz_targets/: fuzz_file_claim.rs  fuzz_finalize_claim.rs  fuzz_initiate_policy.rs
docs/: BRANDING.md  EVENT_DICTIONARY.md  STORYBOOK.md
docs/ops/: log-aggregation.md  stellar-testnet-reset-recovery.md
frontend/: LOCALES.md  package.json  tsconfig.test.json
frontend/public/: site.webmanifest
frontend/src/: middleware.ts
(+119 files in other folders)
